--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,18 +5,13 @@ layout: default
 <div id="home-container" class="container">
   <div class="row">
     <div class="col">
-      <img src="{{ site.baseurl }}/public/snake.png" class="logo mx-auto d-block" alt="722 Network snake logo">
+      <img src="{{ site.baseurl }}/public/722-logo-no-bg-web.png" class="logo mx-auto d-block" alt="722 Network snake logo">
     </div>
   </div>
 
   <div class="row intro">
-    <div class="col-6 text-right">
-      <p><a href="https://github.com/722-network">https://github.com/722-network</a></p>
-      <p><a href="https://gitlab.com/722">https://gitlab.com/722</a></p>
-    </div>
-    <div class="col-6 text-left">
-      <p>We're a group of friends hacking stuff together.</p>
-      <p>all <span class="char">[at]</span> 722 <span class="char">[dot]</span> network</p>
+    <div class="col-12 text-center">
+      <p>A group of friends hacking stuff together.</p>
     </div>
   </div>
 </div>
