--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -88,7 +88,9 @@ footer p {
 }
 
 .logo {
-    max-width: 350px;
+    max-width: 700px;
+    margin-top: 200px;
+    margin-bottom: 50px;
 }
 
 #home-container {
@@ -107,6 +109,8 @@ a:hover {
 .intro p {
     margin: 0;
     font-size: 17px;
+    opacity: 75%;
+    font-family: $root-font-family;
 }
 
 .char {
