feat: Set the logo to be responsive

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,12 @@ layout: default
 ---
 <div id="home-container" class="container">
   <div class="row">
-    <div class="col">
-      <img src="{{ site.baseurl }}/public/722-logo-no-bg-web.png" class="logo mx-auto d-block" alt="722 Network snake logo">
+    <div class="col-1">
+    </div>
+    <div class="col-10">
+    <img src="{{ site.baseurl }}/public/722-logo-no-bg-web.png" class="logo mx-auto d-block" alt="722 Network snake logo">
+    </div>
+    <div class="col-1">
     </div>
   </div>
 
